--- a/index.html
+++ b/index.html
@@ -115,29 +115,41 @@
             <section class="works">
                 <div class="container" id="works">
                     <h2 class="mplus"><span>W</span>orks</h2>
-                    <!-- work item -->
-                    <div class="works__list">
-                        <article class="work-card">
-                            <div class="work-card__img">
-                                <picture>
-                                    <source media="(min-width: 768px)" srcset="./works/Kirameki_Farm/assets/image/bg_pc.png">
-                                    <img src="./works/Kirameki_Farm/assets/image/bg_sp.png" alt="">
-                                </picture>
+                    <!-- 案件1 -->
+                    <div class="work-card">
+                        <div class="work-card__body">
+                            <div class="work-card__title">
+                                <h3 class="work-card__name">課題制作サイト<br>（TechAcademy様）</h3>
+                                <img src="./works/Kirameki_Farm/assets/image/bg_pc.png" alt="Kirameki Farm">
                             </div>
-                            <div class="work-card__body">
-                                <h3 class="work-card__name">課題制作サイト（TechAcademy様）</h3>
-                                <dl>
-                                    <dd>制作時間</dd>
-                                    <dt>１週間</dt>
-                                    <dd>制作範囲</dd>
-                                    <dt>フロントエンド実装（デザインカンプからのコーディング）</dt>
-                                    <dd>使用技術</dd>
-                                    <dt>HTML / CSS / JavaScript</dt>
-                                </dl>
-                                <a href="https://example.com" target="_blank" rel="noopener" class="work-card__link">サイトを見る<i class="bi bi-arrow-right"></i></a>
+                            <dl>
+                                <dt>制作時間</dt>
+                                <dd>6日間（20.5時間）</dd>
+                                <dt>制作範囲</dt>
+                                <dd>フロントエンド実装（デザインカンプからのコーディング）</dd>
+                                <dt>使用技術</dt>
+                                <dd>HTML / CSS / JavaScript</dd>
+                            </dl>
+                        </div>
+                        <!-- 案件2-->
+                        <div class="work-card__body">
+                            <div class="work-card__title">
+                                <h3 class="work-card__name">課題制作サイト<br>（TechAcademy様）</h3>
+                                <img src="./works/KIRAMEKI_BEAUTY_LABO/assets/image/logo.png" alt="KIRAMEKI BEAUTY LABO">
                             </div>
-                        </article>
+                            <dl>
+                                <dt>制作時間</dt>
+                                <dd>7日間（23.5時間）</dd>
+                                <dt>制作範囲</dt>
+                                <dd>フロントエンド実装（デザインカンプからのコーディング）</dd>
+                                <dt>使用技術</dt>
+                                <dd>HTML / CSS / JavaScript</dd>
+                            </dl>
+                        </div>
                     </div>
+                </div>
+                <div class="works__attention">
+                    <p>実際のサイトなど、制作実績については、守秘義務および利用規約の関係上、限定公開にてご案内しております。<br>ご興味をお持ちいただけましたら、お問い合わせよりご連絡ください。</p>
                 </div>
             </section>
         </main>
