--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Web制作クリエイター：Yayoi Morita">
         <meta property="og:description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
         <meta property="og:type" content="article">
-        <meta property="og:url" content="https://drive.google.com/file/d/1CG8CpwrTZpSVHfUkjiMq618RxGHFVQjx/view?usp=sharing">
+        <meta property="og:url" content="https://morita176.github.io/github-morita-176.github.io/">
         <meta property="og:image" content="">
         <meta property="og:site_name" content="Web制作クリエイター：Yayoi Morita">
         <!-- Google Fonts -->
@@ -53,7 +53,7 @@
             <section class="cover">
                 <div class="container">
                     <div class="cover__left">
-                        <img src="/assets/image/cover.jpg" alt="">
+                        <img src="./assets/image/cover.jpg" alt="">
                     </div>
                     <div class="cover__right">
                         <div class="cover__title">
@@ -72,7 +72,7 @@
                         <p>富山県富山市在住。これまでに複数回の転職を経験し、現在はSEとして働いています。<br>約5年間、クラウド環境の運用・保守業務に従事してきました。<br>インフラエンジニアとしての実務経験を背景に、「作って終わり」ではなく、運用まで見据えたWeb制作を意識しています。</p>
                     </div>
                     <div class="about__left">
-                        <img src="/assets/image/about.jpg" alt="">
+                        <img src="./assets/image/about.jpg" alt="">
                     </div>
                 </div>
             </section>
