--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- ファビコン -->
+        <link rel="icon" href="./assets/image/favicon_io/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/image/favicon_io/favicon-16x16.png">
+        <link rel="apple-touch-icon" href="./assets/image/favicon_io/apple-touch-icon.png">
         <title>Web制作クリエイター：Yayoi Morita</title>
         <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
         <meta name="keywords" content="">
@@ -41,9 +46,10 @@
             <nav class="hamburger-menu">
                 <ul class="hamburger-nav-list mplus">
                     <li><a href="./">TOP</a></li>
-                    <li><a href="/about">About Me</a></li>
-                    <li><a href="/skills">Skills</a></li>
-                    <li><a href="/works">Works</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -65,9 +71,9 @@
                 </div>
             </section>
             <!-- About Me -->
-            <section class="about">
+            <section class="about" id="about">
                 <h2 class="mplus"><span>A</span>bout Me</h2>
-                <div class="container about__item" id="about">
+                <div class="container about__item">
                     <div class="about__right">
                         <p>富山県富山市在住。これまでに複数回の転職を経験し、現在はSEとして働いています。<br>約5年間、クラウド環境の運用・保守業務に従事してきました。<br>インフラエンジニアとしての実務経験を背景に、「作って終わり」ではなく、運用まで見据えたWeb制作を意識しています。</p>
                     </div>
@@ -112,8 +118,8 @@
                 </div>
             </section>
             <!-- works -->
-            <section class="works">
-                <div class="container" id="works">
+            <section class="works" id="works">
+                <div class="container">
                     <h2 class="mplus"><span>W</span>orks</h2>
                     <!-- 案件1 -->
                     <div class="work-card">
@@ -152,16 +158,24 @@
                     <p>実際のサイトなど、制作実績については、守秘義務および利用規約の関係上、限定公開にてご案内しております。<br>ご興味をお持ちいただけましたら、お問い合わせよりご連絡ください。</p>
                 </div>
             </section>
+            <!-- contact -->
+            <section class="contact" id="contact">
+                <div class="container">
+                    <h2 class="mplus"><span>C</span>ontact</h2>
+                    <p>以下クラウドソーシングにて案件を受けて回っております。<br>お手数ですが、サイトよりお問い合わせください。</p>
+                    <div class="contact__btn">
+                        <a href="" class="button" target="_blank">ランサーズ様<i class="bi bi-chevron-right button__bi"></i></a>
+                        <a href="" class="button" target="_blank">クラウドワークス様<i class="bi bi-chevron-right button__bi"></i></a>
+
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- footer -->
         <footer class="footer">
-            <p>Copyright &copy; 2023 Taro Kirameki All Rights Reserved.</p>
+            <p>Copyright &copy; 2026 Yayoi Morita All Rights Reserved.</p>
         </footer>
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- js -->
-        <script src="./assets/script/main.js"></script>
     </body>
 
 </html>
