--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/image/favicon_io/favicon-16x16.png">
         <link rel="apple-touch-icon" href="./assets/image/favicon_io/apple-touch-icon.png">
-        <title>Web制作クリエイター：Yayoi Morita</title>
-        <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
+        <title>Web制作クリエイター：morita176</title>
+        <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているmorita176のポートフォリオサイトです。">
         <meta name="keywords" content="">
-        <meta property="og:title" content="Web制作クリエイター：Yayoi Morita">
-        <meta property="og:description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
+        <meta property="og:title" content="Web制作クリエイター：morita176">
+        <meta property="og:description" content="テックアカデミーでWeb制作を学び、副業として活動しているmorita176のポートフォリオサイトです。">
         <meta property="og:type" content="article">
         <meta property="og:url" content="https://morita176.github.io/github-morita-176.github.io/">
         <meta property="og:image" content="">
-        <meta property="og:site_name" content="Web制作クリエイター：Yayoi Morita">
+        <meta property="og:site_name" content="Web制作クリエイター：morita176">
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
 
     <body>
         <header class="header">
-            <a class="header__logo mplus" href="./">Yayoi Morita</a>
+            <a class="header__logo mplus" href="./">morita176</a>
 
             <!-- 開閉用チェックボックス -->
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -63,8 +63,7 @@
                     </div>
                     <div class="cover__right">
                         <div class="cover__title">
-                            <p class="mplus">Yayoi Morita</p>
-                            <h1 class="mplus">森田 弥生</h1>
+                            <h1 class="mplus">morita176</h1>
                         </div>
                         <p><a href="https://techacademy.jp/" target="_blank">TechAcademy</a>にて「はじめての副業コース」「Web制作実践コース」を修了し、2026年2月に卒業しました。<br>現在はAzure構築の学習を進めながら、副業としてWeb制作（フロントエンド）の案件を請け負っています。</p>
                     </div>
@@ -174,7 +173,7 @@
 
         <!-- footer -->
         <footer class="footer">
-            <p>Copyright &copy; 2026 Yayoi Morita All Rights Reserved.</p>
+            <p>Copyright &copy; 2026 morita176 All Rights Reserved.</p>
         </footer>
     </body>
 
