--- a/works/list.html
+++ b/works/list.html
@@ -10,19 +10,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- ファビコン -->
-        <link rel="icon" href="../assets/image/favicon_io/favicon.ico">
-        <link rel="icon" type="image/png" sizes="32x32" href="../assets/image/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../assets/image/favicon_io/favicon-16x16.png">
-        <link rel="apple-touch-icon" href="../assets/image/favicon_io/apple-touch-icon.png">
-        <title>【ポートフォリオ】Web制作クリエイター：Yayoi Morita</title>
-        <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
+        <link rel="icon" href="./assets/image/favicon_io/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/image/favicon_io/favicon-16x16.png">
+        <link rel="apple-touch-icon" href="./assets/image/favicon_io/apple-touch-icon.png">
+        <title>【ポートフォリオ】Web制作クリエイター：morita176</title>
+        <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているmorita176のポートフォリオサイトです。">
         <meta name="keywords" content="">
-        <meta property="og:title" content="Web制作クリエイター：Yayoi Morita">
-        <meta property="og:description" content="テックアカデミーでWeb制作を学び、副業として活動しているMORITA YAYOIのポートフォリオサイトです。">
+        <meta property="og:title" content="Web制作クリエイター：morita176">
+        <meta property="og:description" content="テックアカデミーでWeb制作を学び、副業として活動しているmorita176のポートフォリオサイトです。">
         <meta property="og:type" content="article">
         <meta property="og:url" content="https://morita176.github.io/github-morita-176.github.io/">
         <meta property="og:image" content="">
-        <meta property="og:site_name" content="Web制作クリエイター：Yayoi Morita">
+        <meta property="og:site_name" content="Web制作クリエイター：morita176">
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <!-- CSS -->
-        <link rel="stylesheet" href="../assets/style/main.css">
+        <link rel="stylesheet" href="./assets/style/main.css">
     </head>
 
     <body>
@@ -116,7 +116,7 @@
 
         <!-- footer -->
         <footer class="footer">
-            <p>Copyright &copy; 2026 Yayoi Morita All Rights Reserved.</p>
+            <p>Copyright &copy; 2026 morita176 All Rights Reserved.</p>
         </footer>
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
