--- a/works/list.html
+++ b/works/list.html
@@ -10,10 +10,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- ファビコン -->
-        <link rel="icon" href="./assets/image/favicon_io/favicon.ico">
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./assets/image/favicon_io/favicon-16x16.png">
-        <link rel="apple-touch-icon" href="./assets/image/favicon_io/apple-touch-icon.png">
+        <link rel="icon" href="../assets/image/favicon_io/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="../assets/image/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../assets/image/favicon_io/favicon-16x16.png">
+        <link rel="apple-touch-icon" href="../assets/image/favicon_io/apple-touch-icon.png">
         <title>【ポートフォリオ】Web制作クリエイター：morita176</title>
         <meta name="description" content="テックアカデミーでWeb制作を学び、副業として活動しているmorita176のポートフォリオサイトです。">
         <meta name="keywords" content="">
@@ -32,7 +32,7 @@
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <!-- CSS -->
-        <link rel="stylesheet" href="./assets/style/main.css">
+        <link rel="stylesheet" href="../assets/style/main.css">
     </head>
 
     <body>
@@ -118,10 +118,6 @@
         <footer class="footer">
             <p>Copyright &copy; 2026 morita176 All Rights Reserved.</p>
         </footer>
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!-- js -->
-        <script src="./assets/script/main.js"></script>
     </body>
 
 </html>
