--- a/works/list.html
+++ b/works/list.html
@@ -106,9 +106,8 @@
                     <h2 class="mplus"><span>C</span>ontact</h2>
                     <p>以下クラウドソーシングにて案件を受けて回っております。<br>お手数ですが、サイトよりお問い合わせください。</p>
                     <div class="contact__btn">
-                        <a href="" class="button">ランサーズ様<i class="bi bi-chevron-right button__bi"></i></a>
-                        <a href="" class="button">クラウドワークス様<i class="bi bi-chevron-right button__bi"></i></a>
-
+                        <a href="https://www.lancers.jp/profile/morita176" class="button" target="_blank">ランサーズ様<i class="bi bi-chevron-right button__bi"></i></a>
+                        <a href="https://crowdworks.jp/public/employees/6838525" class="button" target="_blank">クラウドワークス様<i class="bi bi-chevron-right button__bi"></i></a>
                     </div>
                 </div>
             </section>
