--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#works">Works</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
         </header>
@@ -157,7 +157,7 @@
                     <p>実際のサイトなど、制作実績については、守秘義務および利用規約の関係上、限定公開にてご案内しております。<br>ご興味をお持ちいただけましたら、お問い合わせよりご連絡ください。</p>
                 </div>
             </section>
-            <!-- contact -->
+            <!-- contact
             <section class="contact" id="contact">
                 <div class="container">
                     <h2 class="mplus"><span>C</span>ontact</h2>
@@ -167,7 +167,7 @@
                         <a href="https://crowdworks.jp/public/employees/6838525" class="button" target="_blank">クラウドワークス様<i class="bi bi-chevron-right button__bi"></i></a>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
 
         <!-- footer -->
